fixup! Add posts

--- a/content/posts/学习rust/异步.md
+++ b/content/posts/学习rust/异步.md
@@ -1,8 +1,8 @@
 +++
-title = "Rust 的宏"
+title = "Rust 的异步"
 date = "2025-04-26T00:00:00+08:00"
 categories = ["学习Rust"]
-tags = ["Rust", "Rust的宏"]
+tags = ["Rust", "Rust的异步"]
 +++
 
 ## Rust 的异步
