fixup! Add post using nginx

--- a/content/posts/折腾/记录一次将宝塔的网站换成手工搭建.md
+++ b/content/posts/折腾/记录一次将宝塔的网站换成手工搭建.md
@@ -21,50 +21,45 @@ ACME_SCRIPT="/root/.acme.sh/acme.sh"
 export CF_Token=""        # 我的个人资料 -> API 令牌 -> 创建令牌
 export CF_Account_ID=""   # 进入域 -> 右下角的 "帐户ID"
 
-# 将域名放入数组变量
-DOMAINS=(
-    "foo.domain.com"
-    "bar.domain.com"
+DOMAIN_GROUPS=(
+    "foo.domain.com *.foo.domain.com"   # 支持申请 SAN 域名
+    "bar.domain.com *.bar.domain.com"
 )
 
 # 显示开始信息
+echo "开始申请SAN SSL证书..."
 echo "========================================"
-echo "开始为 ${#DOMAINS[@]} 个域名申请 SSL 证书"
-echo "使用的 acme.sh: $ACME_SCRIPT"
-echo "========================================"
-echo ""
 
 # 检查 acme.sh 是否存在
 if [ ! -f "$ACME_SCRIPT" ]; then
-    echo "❌ 错误: 找不到 acme.sh 脚本: $ACME_SCRIPT"
-    echo "请先安装 acme.sh: curl https://get.acme.sh | sh"
+    echo "❌ 错误: 找不到 acme.sh 脚本"
     exit 1
 fi
 
-# 为每个域名申请证书
-for domain in "${DOMAINS[@]}"; do
-    echo "🔄 正在为 $domain 申请证书..."
+# 为每组域名申请证书
+for group in "${DOMAIN_GROUPS[@]}"; do
+    main_domain=$(echo "$group" | awk '{print $1}')
 
-    # 申请证书
-    "$ACME_SCRIPT" --issue -d "$domain" --dns dns_cf
+    echo "🔄 申请证书: $group"
 
-    # 检查上一条命令是否执行成功
+    # 构建并执行命令
+    cmd="$ACME_SCRIPT --issue"
+    for domain in $group; do
+        cmd="$cmd -d $domain"
+    done
+    cmd="$cmd --dns dns_cf --force"
+
+    eval $cmd
+
     if [ $? -eq 0 ]; then
-        echo "✅ $domain 证书申请完成"
+        echo "✅ 证书申请成功: $main_domain"
     else
-        echo "❌ $domain 证书申请失败"
+        echo "❌ 证书申请失败: $main_domain"
     fi
-
-    echo ""
+    echo "----------------------------------------"
 done
 
-echo "========================================"
-echo "证书申请流程完成"
-echo "========================================"
-
-# 显示所有证书状态
-echo ""
-echo "📋 证书状态列表:"
+echo "📋 最终证书列表:"
 "$ACME_SCRIPT" --list
 ```
 
@@ -72,6 +67,7 @@ echo "📋 证书状态列表:"
 
 ```sh
 acme.sh --list
+acme.sh --info -d foo.domain.com --ecc  # 查看证书的信息
 ```
 
 ## 创建域名配置和域名所用到的目录
