Add deploy lx-music-sync-server

--- a/content/posts/折腾/记录一次将宝塔的网站换成手工搭建.md
+++ b/content/posts/折腾/记录一次将宝塔的网站换成手工搭建.md
@@ -70,6 +70,43 @@ acme.sh --list
 acme.sh --info -d foo.domain.com --ecc  # 查看证书的信息
 ```
 
+## 安装证书
+
+```sh
+!/bin/bash
+
+DOMAINS=(
+  "foo.domain.com"
+  "bar.domain.com"
+)
+SSL_PATH="/etc/nginx/ssl"
+ACME_SCRIPT="/root/.acme.sh/acme.sh"
+
+if [ ! -d /etc/nginx/ssl ]; then
+  sudo mkdir /etc/nginx/ssl
+  sudo chown root:www-data /etc/nginx/ssl
+  sudo chmod 750 /etc/nginx/ssl
+fi
+
+for DOMAIN in "${DOMAINS[@]}"; do
+  echo "正在为 $DOMAIN 安装证书..."
+  sudo mkdir -p "$SSL_PATH/$DOMAIN"
+
+  $ACME_SCRIPT --install-cert -d "$DOMAIN" \
+    --key-file       "$SSL_PATH/$DOMAIN/private.key" \
+    --fullchain-file "$SSL_PATH/$DOMAIN/fullchain.pem" \
+    --reloadcmd     "sudo systemctl reload nginx"
+
+  $ACME_SCRIPT --info -d $DOMAIN --ecc | grep -E '(Le_RealKeyPath)|(Le_RealFullChainPath)'
+
+  echo "域名 $DOMAIN 安装完成！"
+  echo "证书位置: $SSL_PATH/$DOMAIN/"
+  echo "----------------------------------------"
+done
+
+echo "所有域名证书安装完成！"
+```
+
 ## 创建域名配置和域名所用到的目录
 
 ```sh
@@ -101,8 +138,8 @@ server {
      server_name foo.domain.com;
 
      # SSL 证书路径
-     ssl_certificate /root/.acme.sh/foo.domain.com_ecc/fullchain.cer;
-     ssl_certificate_key /root/.acme.sh/foo.domain.com_ecc/foo.domain.com.key;
+     ssl_certificate /etc/nginx/ssl/foo.domain.com/fullchain.pem
+     ssl_certificate_key /etc/nginx/ssl/foo.domain.com/private.key
 
      # SSL 配置
      ssl_protocols TLSv1.2 TLSv1.3;
@@ -154,7 +191,10 @@ curl -L foo.domain.com
 /etc/nginx/sites-available/bar.domain.com:
 
 ```
-  # 代理相关头部
+server {
+    # ...
+
+    # 代理相关头部
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -177,6 +217,9 @@ curl -L foo.domain.com
         proxy_buffer_size 4k;
         proxy_buffers 8 4k;
     }
+
+    # ...
+}
 ```
 
 Test:
@@ -190,6 +233,9 @@ dig bar.domain.com
 /etc/nginx/sites-available/baz.domain.com:
 
 ```
+server {
+    # ...
+
     # 根目录 - 返回404，不提供任何信息
     location = / {
         return 404;
@@ -252,6 +298,9 @@ dig bar.domain.com
         deny all;
         return 404;
     }
+
+    # ...
+}
 ```
 
 Test:
@@ -280,8 +329,8 @@ server {
     server_name qux.domain.com;
 
     # SSL 证书路径（保持原有证书）
-    ssl_certificate /root/.acme.sh/qux.domain.com_ecc/fullchain.cer;
-    ssl_certificate_key /root/.acme.sh/qux.domain.com_ecc/qux.domain.com.key;
+    ssl_certificate /etc/nginx/ssl/qux.domain.com/fullchain.pem
+    ssl_certificate_key /etc/nginx/ssl/qux.domain.com/private.key
 
     # SSL 配置
     ssl_protocols TLSv1.2 TLSv1.3;
